2006-11-05  Albert Chu  <chu11@llnl.gov>

	* man/cerebro_nodelist_metric_name.3: Fix typos and add forgotten
	value types.
	
2006-11-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_monitor_update.h,
	src/cerebrod/cerebrod_monitor_update.c: New files.

	* src/cerebrod/cerebrod_listener_data.h,
	src/cerebrod/cerebrod_listener_data.c: Cleanup by moving monitor
	module code to new files above.

	* src/cerebrod/Makefile.am: Updated for new files.
	
2006-10-31  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules):
	Cleanup strtok code.

	* Various continued code cleanup.
	
2006-10-30  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c,
	src/cerebrod/cerebrod_listener_data.h,
	src/cerebrod/cerebrod_metric_controller.c,
	src/cerebrod/cerebrod_metric_server.c,
	src/libs/include/cerebro/cerebro_config.h,
	src/cerebrod/cerebrod_util.c: Various code cleanup.  Rehash hashes
	as needed.  Remove need for listener_data_list.

	* man/cerebro_module_devel.3.in: Add forgotten headers.
	
2006-10-29  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/vector.h, src/libs/common/vector.c: New files.

	* src/libs/common/Makefile.am: Update appropriately.

	Remove need for metric_max and monitor_max to limit number of
	loadable modules.

	* src/libs/modules/metric_module.h,
	src/libs/modules/metric_module.c,
	src/libs/modules/monitor_module.h,
	src/libs/modules/monitor_module.c: Remove modules_max use, use
	vectors instead.

	* src/libs/util/config_util.c,
	src/libs/include/cerebro/cerebro_config.h,
	src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_listener_data.c,
	src/cerebrod/cerebrod_speaker_data.c: Remove use of metric_max and
	monitor_max as needed.
	
	* man/cerebro.conf.5.in, man/cerebro_module.3.in,
	man/cerebro_module_devel.3.in: Adjust appropriately.

	* src/libs/include/cerebro/cerebro_constants.h: Make
	CEREBRO_MAX_PACKET_LEN same as max UDP size.
